--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,4 +14,73 @@
  *= require_self
  */
 
- 
+ body {
+  background-color: #000306; /* Fondo claro para simular el ambiente de Hogwarts */
+  font-family: 'Garamond', serif; /* Fuente elegante, similar a la de los libros */
+}
+
+h1 {
+  color: #8A1B1B; /* Color rojo similar a Gryffindor */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.list-group {
+  max-width: 800px; /* Limitar el ancho de la lista */
+  margin: 0 auto; /* Centrar la lista */
+}
+
+.character-item {
+  background-color: #9308c5; /* Fondo blanco para las tarjetas de personajes */
+  border: 2px solid #8A1B1B; /* Borde en color de Gryffindor por defecto */
+  border-radius: 5px;
+  margin-bottom: 10px; /* Espaciado entre los elementos de la lista */
+  padding: 10px; /* Espaciado interno */
+  transition: background-color 0.3s, transform 0.3s; /* Efecto suave al pasar el ratón */
+}
+
+.character-item:hover {
+  background-color: #f0e68c; /* Color de fondo al pasar el ratón */
+  transform: scale(1.02); /* Ligera ampliación al pasar el ratón */
+}
+
+/* Estilos por casa */
+.gryffindor {
+  border-color: #A50034; /* Rojo Gryffindor */
+}
+
+.hufflepuff {
+  border-color: #D6AA3D; /* Amarillo Hufflepuff */
+}
+
+.ravenclaw {
+  border-color: #003D5B; /* Azul Ravenclaw */
+}
+
+.slytherin {
+  border-color: #3A7D4D; /* Verde Slytherin */
+}
+
+.badge-house {
+  color: #fff; /* Color del texto */
+  font-weight: bold;
+  margin-left: 5px; /* Espacio entre la casa y el resto del texto */
+}
+
+/* Colores de casa para las insignias */
+.badge-house.gryffindor {
+  background-color: #A50034; /* Rojo Gryffindor */
+}
+
+.badge-house.hufflepuff {
+  background-color: #D6AA3D; /* Amarillo Hufflepuff */
+}
+
+.badge-house.ravenclaw {
+  background-color: #003D5B; /* Azul Ravenclaw */
+}
+
+.badge-house.slytherin {
+  background-color: #3A7D4D; /* Verde Slytherin */
+}
